2019-05-03  Karl Berry  <karl@tug.org>

	* version.ac: 1.3.8/dev since TL'19 is released.

2019-02-15  Akira Kakuto  <kakuto@w32tex.org>

	* ptexenc.c: Initialize a local variable.

2019-02-11  Karl Berry  <karl@tug.org>

	* version.ac: no /dev for TL'19.

2019-01-23  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* ptexenc.c, ptexenc/ptexenc.h: define enc_to_string() and
	get_internal_enc() as extern.

2018-06-14  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* ptexenc.c, ptexenc/ptexenc.h: remove sjisterminal (w32 only).

2018-06-09  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* ptexenc.c, ptexenc/ptexenc.h: Add new functions
	ptenc_from_utf8_string_to_internal_enc(),
	ptenc_from_internal_enc_string_to_utf8() and
	ptenc_get_command_line_args() to support UTF-8 file names
	on UTF-8 locale in pTeX (Unix-like platform only).

2018-03-26  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* ptexenc.c: Change default_kanji_enc from ENC_SJIS to ENC_UTF8
	(Windows only).

2018-01-17  Karl Berry  <karl@freefriends.org>

	* ptexenc.c: #include <kpathsea/c-pathmx.h>, per Debian.

2017-09-09  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* ptexenc.c, ptexenc/ptexenc.h: Add a new function setstdinenc()
	 for the primitive \epTeXinputencoding in e-(u)pTeX.

2017-03-18  Karl Berry  <karl@tug.org>

	* version.ac (ptexenc_version): 1.3.5dev => 1.3.5 for TL17.

2016-06-30  Karl Berry  <karl@tug.org>

	* version.ac (ptexenc_version): 1.3.4 => 1.3.5dev.

2016-03-06  Karl Berry  <karl@tug.org>

	* version.ac: remove /dev for start of 2016 builds.

2016-03-01  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* ptexenc.c: Increase default OPEN_MAX on system
	lacking of OPEN_MAX.

2016-02-01  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* ptexenc.c, ptexenc/ptexenc.h: Add a function setinfileenc() for a new
	primitive \epTeXinputencoding in e-(u)pTeX. (from N. Abe).

2016-01-25  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* ptexenc.c: Fix a bug, reported by N. Abe, in isUTF8Nstream().
